--- a/dev/client/scss/style.scss
+++ b/dev/client/scss/style.scss
@@ -64,3 +64,17 @@ html, body {
   text-align: center;
   font-family: 'Open Sans', sans-serif;
 }
+
+cp-menu {
+  position: fixed;
+  top: 10px;
+  right: 10px;
+}
+
+.navbar, .navbar-menu {
+  background-color: rgba(255,255,0, 0.5);
+}
+
+a.navbar-item:hover {
+  background-color: rgba(255,255,0, 1);
+}
