--- a/dev/client/scss/style.scss
+++ b/dev/client/scss/style.scss
@@ -68,9 +68,9 @@ cp-menu {
 }
 
 .navbar, .navbar-menu {
-  background-color: rgba(255,255,0, 0.5);
+  background-color: rgba(255, 255, 0, 0.5);
 }
 
 a.navbar-item:hover {
-  background-color: rgba(255,255,0, 1);
+  background-color: rgba(255, 255, 0, 1);
 }
