--- a/dev/client/scss/style.scss
+++ b/dev/client/scss/style.scss
@@ -10,6 +10,10 @@ html, body {
   height: 100%;
 }
 
+body {
+  overflow: hidden;
+}
+
 #main {
   height: 100%;
 
@@ -23,9 +27,10 @@ html, body {
       opacity: 0.8;
       width: 100%;
       height: 100%;
-      top:0;
-      left:0;
+      top: 0;
+      left: 0;
       position: fixed;
+      z-index: 100;
     }
 
     .map-loader:after {
@@ -36,6 +41,10 @@ html, body {
       width: 5em;
       height: 5em;
       border-width: 0.25em;
+    }
+
+    cp-menu {
+      display: none;
     }
   }
 }
@@ -67,7 +76,7 @@ html, body {
     &.special {
       background-image: url('images/pokemon/animated/shiny/back/#{$i}.gif');
 
-      &.active{
+      &.active {
         background-image: url('images/pokemon/animated/shiny/#{$i}.gif');
       }
     }
@@ -85,14 +94,18 @@ html, body {
 
 cp-menu {
   position: fixed;
-  top: 10px;
-  right: 10px;
-}
+  display: flex;
+  width: 100%;
+  align-items: center;
+  justify-content: center;
+  bottom: 10px;
 
-.navbar, .navbar-menu {
-  background-color: rgba(255, 255, 0, 0.5);
-}
-
-a.navbar-item:hover {
-  background-color: rgba(255, 255, 0, 1);
+  .pokeball {
+    background: transparent no-repeat url('images/poke-ball.png');
+    background-size: 50px 50px;
+    border: none;
+    outline: none;
+    width: 50px;
+    height: 50px;
+  }
 }
