--- a/dev/client/scss/style.scss
+++ b/dev/client/scss/style.scss
@@ -69,16 +69,22 @@ body {
     background-image: url('images/pokemon/animated/back/#{$i}.gif');
     background-size: contain;
 
-    &.active {
-      background-image: url('images/pokemon/animated/#{$i}.gif');
-    }
-
     &.special {
       background-image: url('images/pokemon/animated/shiny/back/#{$i}.gif');
+    }
+  }
 
-      &.active {
-        background-image: url('images/pokemon/animated/shiny/#{$i}.gif');
-      }
+  .popup-image-#{$i} {
+    background-image: url('images/pokemon/animated/#{$i}.gif');
+    background-size: contain;
+    width: 50px;
+    height: 50px;
+    cursor: pointer;
+    image-rendering: pixelated;
+    background-repeat: no-repeat;
+
+    &.special {
+      background-image: url('images/pokemon/animated/shiny/#{$i}.gif');
     }
   }
 }
